--- a/DNScleanup.html
+++ b/DNScleanup.html
@@ -68,8 +68,10 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 	<div class="dropdown">
 		<a href='' class="dropbtn">Articles</a>
   <div class="dropdown-content" style='line-height: 1.6;'>
-    <a href="DNScleanup.html" class=two>Cleaning up your Windows DNS server</a><br>
-   <a href="oneDriveLocale.html" class=two>Set OneDrive for Business Locale</a><br>
+	<a href="microsoftSupport.html" class=two>Overview of Microsoft Support cases</a><br>
+	<a href="centralizedMail.html" class=two>When centralized mail sends via O365</a><br>
+        <a href="DNScleanup.html" class=two>Cleaning up your Windows DNS server</a><br>
+        <a href="oneDriveLocale.html" class=two>Set OneDrive for Business Locale</a><br>
 	<a href="o365migration.html" class=two>O365 Migration Tips</a><br>
 	<a href="o365reporting.html" class=two>Reporting on successful Azure logons</a><br>
 	<a href="iisQueue.html" class=two>IIS Mapi Queue full with NetScaler</a><br>
