--- a/microsoftSupport.html
+++ b/microsoftSupport.html
@@ -53,7 +53,8 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 	.imagecaption { font-style: italic; }
 	.imageMain { border: 5px solid #564c4d; }
 	    
-.table1 th, td {
+.tableone td, 
+.tableone th {
 	padding: 2px;
 	font-family:verdana;
 	font-size:12px;
@@ -102,7 +103,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
         <div class=content><br>
           The following is a breakdown of Microsoft Support calls (28) I've made in the last few years:<br>
           <br>
-          <table class=table1><tr><th style='width:70px;'>Date</th><th>Issue</th><th>Resolution</th></tr>
+          <table class=tableone><tr><th style='width:70px;'>Date</th><th>Issue</th><th>Resolution</th></tr>
             <tr><td>Jul 2018</td><td>Exchange servers bluescreening</td><td>Windows firewall was enabled for all outgoing connections, this was removed.</td></tr>
             <tr><td>Aug 2018</td><td>Single Exchange server crashing</td><td> Emulex FC Driver "elxfc.sys" needed to be updated.</td></tr>
             <tr><td>Nov 2018</td><td>Exchange servers not responding to network requests</td><td>Caused by the server anti-virus, Trend Micro.</td></tr>
