--- a/microsoftSupport.html
+++ b/microsoftSupport.html
@@ -71,21 +71,22 @@ a.two:hover {color: #447EAE; text-decoration: none;}
   <body>
     
     <table style='width:100%; padding:0px; border-collapse: collapse;'>
-      <tr><td style='height:25px; color:#564c4d; width:50%; font-size:25px; font-family:Montserrat, sans-serif; text-align:left;'><img src='giraffe3.png' style='height:55px; padding:10px; vertical-align:middle;'><a href='index.html' class=dropbtn>Graph and PowerShell Blog</a></td>
+      <tr><td style='height:25px; color:#564c4d; width:50%; font-size:25px; font-family:Montserrat, sans-serif; text-align:left;'><a href='index.html' class=dropbtn><img src='giraffe3.png' style='height:55px; padding:10px; vertical-align:middle; border:0px;'>Graph and PowerShell Blog</a></td>
         
-        <td style='width:50%; color:#564c4d; font-size:15px; font-family:Montserrat, sans-serif; text-align:right; vertical-align:middle; padding-right:300px;'>
+        <td style='width:50%; color:#564c4d; font-size:15px; font-family:Montserrat, sans-serif; text-align:right; padding-right:300px;'>
 		
 		 
 	<div class="dropdown">
 		<a href='' class="dropbtn">Articles</a>
   <div class="dropdown-content" style='line-height: 1.6;'>
-	<a href="microsoftSupport.html" class=two>Overview of Microsoft Support cases</a><br>
-	<a href="centralizedMail.html" class=two>When centralized mail sends via O365</a><br>
+	      <a href="delegateSentItems.html" class=two>Delegate Sent Items placed into external Tenant</a><br>
+	      <a href="microsoftSupport.html" class=two>Overview of Microsoft Support cases</a><br>
+	      <a href="centralizedMail.html" class=two>When centralized mail sends via O365</a><br>
         <a href="DNScleanup.html" class=two>Cleaning up your Windows DNS server</a><br>
         <a href="oneDriveLocale.html" class=two>Set OneDrive for Business Locale</a><br>
-	<a href="o365migration.html" class=two>O365 Migration Tips</a><br>
-	<a href="o365reporting.html" class=two>Reporting on successful Azure logons</a><br>
-	<a href="iisQueue.html" class=two>IIS Mapi Queue full with NetScaler</a><br>
+	      <a href="o365migration.html" class=two>O365 Migration Tips</a><br>
+	      <a href="o365reporting.html" class=two>Reporting on successful Azure logons</a><br>
+	      <a href="iisQueue.html" class=two>IIS Mapi Queue full with NetScaler</a><br>
         <a href="o365cert.html" class=two>Secure Office365 reports with a certificate</a><br>
         <a href="graphMail.html" class=two>Using Graph to send emails with inline images</a><br>
         <a href="charts.html" class=two>Visualizing Graph data with Google Charts</a><br>
@@ -93,6 +94,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
         <a href="DNScleanup.html" class=two>Cleaning up your Windows DNS server</a><br>
   </div>
 </div>	
+	
 		
 		| <a href='about.html' class=two>About</a> | <a href='links.html' class=two>Links</a></td></tr> 
       <tr><td style='height:1px; color:#564c4d; width:100%; border-bottom: 1px solid;' colspan=2></td></tr>
