--- a/DNScleanup.html
+++ b/DNScleanup.html
@@ -68,6 +68,9 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 	<div class="dropdown">
 		<a href='' class="dropbtn">Articles</a>
   <div class="dropdown-content" style='line-height: 1.6;'>
+	<a href="reviewQuarantine.html" class=two>Unable to review quarantined mails for shared mailbox</a><br>
+	<a href="setLocale.html" class=two>Set Locale for various Apps</a><br>
+	<a href="delegateSentItems.html" class=two>Delegate Sent Items placed into external Tenant</a><br>
 	<a href="microsoftSupport.html" class=two>Overview of Microsoft Support cases</a><br>
 	<a href="centralizedMail.html" class=two>When centralized mail sends via O365</a><br>
         <a href="DNScleanup.html" class=two>Cleaning up your Windows DNS server</a><br>
@@ -79,6 +82,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
         <a href="graphMail.html" class=two>Using Graph to send emails with inline images</a><br>
         <a href="charts.html" class=two>Visualizing Graph data with Google Charts</a><br>
         <a href="alwaysOn.html" class=two>Keeping a log of NetScaler AlwaysON connections</a><br>
+        <a href="DNScleanup.html" class=two>Cleaning up your Windows DNS server</a><br>
   </div>
 </div>	
 		
