--- a/delegateSentItems.html
+++ b/delegateSentItems.html
@@ -68,6 +68,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 	<div class="dropdown">
 		<a href='' class="dropbtn">Articles</a>
   <div class="dropdown-content" style='line-height: 1.6;'>
+	<a href="reviewQuarantine.html" class=two>Unable to review quarantined mails for shared mailbox</a><br>
 	<a href="setLocale.html" class=two>Set Locale for various Apps</a><br>
 	<a href="delegateSentItems.html" class=two>Delegate Sent Items placed into external Tenant</a><br>
 	<a href="microsoftSupport.html" class=two>Overview of Microsoft Support cases</a><br>
