--- a/reviewQuarantine.html
+++ b/reviewQuarantine.html
@@ -96,8 +96,9 @@ a.two:hover {color: #447EAE; text-decoration: none;}
         When Microsoft made changes to the Security Portal in the Summer of 2022 an issue arose for on-prem mailbox users where they could no longer review quarantined messages for shared mailboxes.<br>
         <br>
          <img src='reviewQuarantine01.png' class=imageMain>
-          <div class='imageCaption></div>
-                      This was a <a href='https://techcommunity.microsoft.com/t5/microsoft-365/accessing-the-quarantine-of-a-shared-mailbox/m-p/2887848'>known issue</a> for Microsoft and although they accepted a design change request it seems unlikely it will be fixed soon, if ever. The only workaround is to get a Quarantine Admin to check the mails or else migrate the mailbox to the cloud.<br>
+          <div class='imageCaption>↑ Error message when trying to review quarantined emails.</div>
+	 <br>
+           This was a <a href='https://techcommunity.microsoft.com/t5/microsoft-365/accessing-the-quarantine-of-a-shared-mailbox/m-p/2887848'>known issue</a> for Microsoft and although they accepted a design change request it seems unlikely it will be fixed soon, if ever. The only workaround is to get a Quarantine Admin to check the mails or else migrate the mailbox to the cloud.<br>
           <br><br> 
            
            
